# models-virtualcell

./: .gitattributes  .gitignore  AGENTS.md  ATTRIBUTION.md  LICENSE  README.md  README_SPLIT.md  STANDARDS.md  biosim-index.yaml  pytest.ini
.github/workflows/: ci.yml
docs/: PUBLIC_INTERNAL_BOUNDARY.md
models/virtualcell-arc-state-predictor/: model.yaml
models/virtualcell-arc-state-predictor/src/: virtual_cell.py
models/virtualcell-arc-state-predictor/tests/: test_virtual_cell.py
models/virtualcell-expression-monitor/: model.yaml
models/virtualcell-expression-monitor/src/: expression_monitor.py
models/virtualcell-expression-monitor/tests/: conftest.py  test_expression_monitor.py
models/virtualcell-expression-translator/: model.yaml
models/virtualcell-expression-translator/src/: expression_translator.py
models/virtualcell-expression-translator/tests/: conftest.py  test_expression_translator.py
models/virtualcell-grn-predictor/: model.yaml
models/virtualcell-grn-predictor/src/: virtual_cell.py
models/virtualcell-grn-predictor/tests/: conftest.py  test_virtual_cell.py
models/virtualcell-perturbation-source/: model.yaml
models/virtualcell-perturbation-source/src/: perturbation_source.py
models/virtualcell-perturbation-source/tests/: test_perturbation_source.py
scripts/: check_entrypoints.py  validate_manifests.py
templates/model-pack/: README.md  pyproject.toml
templates/model-pack/examples/: demo.yaml
templates/model-pack/src/my_pack/: __init__.py  modules.py
templates/model-pack/tests/: test_modules.py
