[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bsim-my-pack"
version = "0.1.0"
description = "Custom modules for bsim simulations"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
    { name = "Your Name", email = "you@example.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "bsim>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "bsim[ui]",
]

[project.urls]
Homepage = "https://github.com/yourname/bsim-my-pack"
Documentation = "https://github.com/yourname/bsim-my-pack#readme"

[tool.hatch.build.targets.wheel]
packages = ["src/my_pack"]
